<resources>
    <string name="app_name">PexelsWallpapersApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallPaper">WallPapers</string>
    <string name="categories">Categories</string>
    <string name="back">back</string>
    <string name="download">downLoad</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="download_image">download</string>
    <string name="set_both">set both</string>
    <string name="set_as_background">set as background</string>
    <string name="set_as_lockscreen">set as lockscreen</string>
    <string name="search">search</string>
    <string name="retry">retry</string>
    <string name="error_loading_more_try_again">Error when trying to load the next page. Try again</string>
    <string name="text_screen_descanso">Ativar a função de tela de descanso</string>
    <string name="want_delete">Deseja deleta a foto?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
</resources>